--- a/css/style.css
+++ b/css/style.css
@@ -107,11 +107,12 @@ span.cc_title{
 	-webkit-box-shadow:4px 0 7px #000;
 	box-shadow:4px 0 7px #000;
 }
+.cc_content > div{
+	display: none;
+}
 .cc_content div{
-	display:none;
 	margin: 0% 7%;
-	
-}	
+}		
 .cc_content p{
 	opacity:0.7;
 	text-transform: none;
